--- a/11-frontend-javascript/projects/window-object-and-debugger-long-practice/assets/index.html
+++ b/11-frontend-javascript/projects/window-object-and-debugger-long-practice/assets/index.html
@@ -138,6 +138,7 @@
             </div>
         </form>
     </div>
+    <script src="./assets/js/index.js" type="module"></script>
 </body>
 
 </html>
